Fixes spacing & responsiveness

--- a/src/Podium.css
+++ b/src/Podium.css
@@ -6,8 +6,8 @@
   display: flex;
   align-items: flex-end;
   justify-content: space-around;
-  margin: 200px;
-  margin-bottom: 50px;
+  gap: 20px;
+  margin: 100px 25%;
 }
 
 .podium-level {
@@ -34,4 +34,10 @@
 #first-place {
   background-color: #FFB300; /* Gold */
   height: 300px;
+}
+
+@media screen and (max-width: 768px) {
+  .podium {
+    flex-direction: column;
+  }
 }
